sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:11: error: not found: value n
      for (j <- 0 to n - 2) {
                     ^AlgCocktailSort1:16: error: not found: value n
      for (j <- 0 to n - 2) {
                     ^