sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var echangeCount:Int = -1
  var itemCount:Int = getNombreValeurs()
  var i:Int = 0
  
  while (echangeCount != 0) {
    echangeCount = 0
    
    if (i % 2 == 0) {
      for (j <- 0 to n - 2) {
        if (plusPetit(i + 1, i))
        	echange(i + 1, i); echangeCount += 1
      }
    } else if (i % 2 == 1) {
      for (j <- 0 to n - 2) {
        if (plusPetit(i - j + 1, i - j))
        	echange(i - j + 1, i - j); echangeCount += 1
      }
    }
    
    i += 1
  }
}